# HovorunBot

./: .gitignore  AGENTS.md  README.md  __main__.py  ai_client.py  alembic.ini  bot_runtime.py  bot_types.py  cli.py  di_config.py  docker-compose.yml  errors.py  example.env  main.py  pyproject.toml  roadmap.md  settings.py  utils.py
admin_panel/: app.py  auth_backend.py  common.py  module.py
admin_panel/admin_models/: __init__.py  _dependencies.py  chat.py  chat_configuration.py  model.py  model_configuration.py  provider.py  user.py
admin_panel/views/: chat.py  user.py
ai_client/: __init__.py  base.py  grok.py  infermatic.py  model_params.py  module.py
bot_runtime/: __init__.py  message_pipeline.py  module.py  runtime.py  telegram_handlers.py
bot_runtime/message_handlers/: __init__.py  ai_message.py  base.py  empty_chat_settings.py  empty_message.py  helpers.py  not_allowed.py  summarize_message.py  test_message.py
cache/: module.py  telegram_update_storage.py  valkey.py
database/: base.py  chat_access_repository.py  chat_configuration_repository.py  connection.py  models.py  module.py
database/dtos/: user.py
database/models/: __init__.py  base.py  user.py
logging_config/: __init__.py  common.py  configurator.py  module.py
management/: __init__.py  module.py  superuser_service.py
migrations/: README  env.py  script.py.mako
migrations/versions/: 202409300001_create_chat_access_table.py  202410010001_add_provider_to_chat_access.py  2025_10_23_create_user_model.py  2025_10_23_initial_schema.py
services/: __init__.py  authentication.py  chat_service.py  user.py
settings/: admin.py  base.py  bot.py  cache.py  database.py  grok.py  infermatic.py  logging.py  module.py
settings/ai_client/: base_settings.py  grok_settings.py
utils/: dependable.py  di.py  message_chain.py
