[project]
name = "HovorunBot"
version = "0.0.0a0.dev3"
description = "AI Sidekick for Telegram Chats"
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Oleh Chyhyryn", email = "oleh.chyhyryn@outlook.com" },
]
maintainers = [
    { name = "Oleh Chyhyryn", email = "oleh.chyhyryn@outlook.com" },
]
license = { text = "BSD-3-Clause" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: BSD License",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
]
dependencies = [
    "alembic>=1.17.0",
    "injector>=0.22.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.12.2",
    "pydantic-settings>=2.11.0",
    "python-telegram-bot>=22.5",
    "sqlalchemy[mypy]>=2.0.44",
    "valkey[libvalkey]>=6.1.1",
    "xai-sdk>=1.3.1",
    "greenlet>=3.2.4",
    "uvicorn>=0.38.0",
    "bcrypt>=5.0.0",
    "sqladmin[full]>=0.21.0",
    "fastapi>=0.120.0",
    "starlette[full]>=0.48.0",
    "passlib[bcrypt]>=1.7.4",
]

[project.urls]
Homepage = "https://github.com/TwilightSparkle42/HovorunBot"
Repository = "https://github.com/TwilightSparkle42/HovorunBot"

[project.scripts]
hovorun = "cli:main"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ARG", # flake8-unused-arguments
    "BLE", # flake8-blind-except
    "DTZ", # flake8-datetimez
    "RET", # flake8-return
    "S",   # bandit
    "SIM", # flake8-simplify
    "ASYNC", # flake8-async
]
ignore = [
    "S101", # assert are used in application
]

[tool.mypy]
python_version = "3.14"
strict = true
warn_unused_ignores = true
enable_error_code = [
    "ignore-without-code",
]
plugins = [
    "sqlalchemy.ext.mypy.plugin",
    "pydantic.mypy",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]


[tool.hatch.build]
# Include project resources and metadata in distributions
# Code packages are already included via [tool.hatch.build.targets.wheel]
include = [
    "README.md",
    "AGENTS.md",
    "LICENSE",
    "roadmap.md",
    "alembic.ini",
    "migrations/**",
    "docker-compose.yml",
    "example.env",
]
# Exclude files and directories that are in .gitignore or otherwise not intended for distribution
exclude = [
    "/.idea/**",
    "/.env",
    "/askbro.db",
    "/cache/valkey/**",
    "/local_admin.txt",
]
